# mechdog_ms

./: install_ros2_jazzy_gz_harmonic.sh
install/: local_setup.sh  setup.sh
install/mechdog_control/share/mechdog_control/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/mechdog_description/share/mechdog_description/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/mechdog_gazebo/share/ament_index/resource_index/package_run_dependencies/: mechdog_gazebo
install/mechdog_gazebo/share/mechdog_gazebo/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/mechdog_gazebo/share/mechdog_gazebo/launch/: bringup.launch.py
log/: latest_build
src/mechdog_sim/mechdog_control/: CMakeLists.txt
src/mechdog_sim/mechdog_control/config/: controllers.yaml
src/mechdog_sim/mechdog_description/: CMakeLists.txt
src/mechdog_sim/mechdog_description/urdf/: mechdog.urdf.xacro
src/mechdog_sim/mechdog_gazebo/: CMakeLists.txt  package.xml
src/mechdog_sim/mechdog_gazebo/scripts/: stand_pose.py
src/mechdog_sim/mechdog_gazebo/worlds/: mechdog_world.sdf
