<?xml version="1.0"?>
<package format="3">
  <name>mechdog_gazebo</name>
  <version>0.0.1</version>
  <description>Gazebo (gz) bringup for MechDog ROS2 simulator.</description>

  <maintainer email="pushkarshetye9867@gmail.com">you</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>mechdog_description</exec_depend>
  <exec_depend>mechdog_control</exec_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>

  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros2_control</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>