<?xml version="1.0"?>
<package format="3">
  <name>mechdog_description</name>
  <version>0.0.1</version>
  <description>MechDog URDF/Xacro description for ROS2 + Gazebo.</description>

  <maintainer email="pushkarshetye9867@gmail.com">you</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>